syntax = "proto3";

package io.restorecommerce.property;

message Property {
  optional string id = 1;
  optional string value = 2;
  optional string unit_code = 3;
}

message PropertyObj {
  optional Property properties = 1;
}
